tests/syntax/bad/testfile-for-4.c
#include <stdbool.h>
#include <stdlib.h>
#include <stdio.h>

void m() { for(int i = 0; ; ; i++) ; }
